src/component/PDPSizeGuide/PDPSizeGuide.style.scss
:root {
    --button-border-color: #000000;
    --divider-color: #EFEFEF;
    --scrollbar-color: #F3F3F3;
    --scrollbar-thumb-color: #D1D3D4;
}
.PDPSizeGuide {
    &-HeaderContainer {
        width: 100%;
        overflow: visible;
        min-height: 2rem;
        margin-bottom: 2rem;

        @include desktop {
            margin-bottom: 0px;
        }
    }

    &-Divider {
        width: 100%;
        border-top: solid 1px var(--divider-color);
        margin-top: 3rem;

        @include desktop {
            margin-top: 4rem;
        }
    }

    &-Header {
        position: relative; 
        left: 50%;
        transform: translateX(-50%);
        width: 100%;
        font-family: 'Avenir Next Demi';
        text-align: center;
        font-size: 16px;
        font-weight: 1px;
        letter-spacing: 1.5px; 

        @include desktop {
            position: static;
            transform: translateX(0);
            left: 0;
            text-align: left;
            font-size: 26px;
            letter-spacing: 0.5px;

            &_isArabic {
                text-align: right;
            }
        }
        
    }

    &-SubHeader {
        position:relative;
        font-size: 20px;
        font-family: 'Avenir Next Regular';
        display: block;
        margin-bottom: 1.5rem;
    }

    &-Line{
        overflow-y: hidden;
        width: 115%;
        margin-left: -7%;
        margin-top: 1.5rem;
        border-bottom: 0.5px solid rgba(0,0,0,0.39);

        &_isArabic {
            margin-left: 0px;
            margin-right: -7%;
        }

        @include desktop {
            display: none;
        }
    }

    &-BackBtn {
        float: left;
        border: solid black;
        border-width: 0 3px 3px 0;
        padding: 6px;
        margin-top: 0.3rem;
        margin-left: 5px;
        transform: rotate(-225deg);
        z-index: 100;

        &_isArabic {
            float: right;
            transform: rotate(-45deg);
            margin-left: 0px;
            margin-right: 5px;
        }

        @include desktop {
            display: none;
        }

        @include tablet {
            display: block;
        }
    }

    &-Button {
        border: 1px solid var(--button-border-color);
        border-radius: 5px;
        padding-left: 0.8rem;
        padding-right: 0.8rem;
        padding-top: 0.4rem;
        padding-bottom: 0.4rem;
        font-weight: lighter;
        font-family: 'Avenir Next Regular';

        @include desktop {
            border: none;
            text-decoration: underline
        }

    }

    &-Modal {
        width: 100%;
        height: 100%;
        justify-content: flex-end;

        &_isOpen {
            .Popup-Content {
                width: 100%;
                padding-left: 5%;
                padding-right: 5%;

                @include desktop {
                    overflow: visible;
                    padding: 1%;
                    width: 28.5%;
                    margin-top: 15%;
                    max-height: 100%;
                    height: 100vh;
                    border-radius: 0px;
                }

                @include tablet {
                    max-height: 100%;
                }
            }
        }

        &_isArabic {
            direction: rtl;
        }
    }

    &-GuideContainer {
        position: relative;
        height: 100%;
    }

    &-TableContainer {
        margin-bottom: 14rem;

        @include desktop {
            position: absolute;
            bottom: 0;
            top: 10%;
            width: 100%;
            overflow-y: scroll;
            padding-right: 6%;
            padding-left: 1.5%;

            &_isArabic {
                padding-right: 0px;
                padding-left: 6%;
            }

            &::-webkit-scrollbar {
                background-color: var(--scrollbar-color);
                width: 1rem;
            }

            &::-webkit-scrollbar-thumb {
                background-color: var(--scrollbar-thumb-color);
            }
        }
    }
}

